--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,16 @@ body {
   src: local('Rounded_Elegance'), url('./fonts/Rounded_Elegance.ttf') format('truetype');
 }
 
+@font-face {
+  font-family: 'DrukCyr-Bold';
+  src: url('./fonts/druk-cyr/DrukCyr-Bold.woff2') format('woff2'),
+       url('./fonts/druk-cyr/DrukCyr-Bold.woff') format('woff'),
+       url('./fonts/druk-cyr/DrukCyr-Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
